@@ -791,7 +791,10 @@ dvi_locate_font (const char *tfm_name, spt_t ptsize)
   if (!name)
     name = tfm_name; /* for error reporting */
 
-  loaded_fonts[cur_id].tfm_id     = texpdf_tfm_open(name, 1);
+  memset(&loaded_fonts[cur_id], 0, sizeof (struct loaded_font));
+
+  /* TFM must exist here. */
+  loaded_fonts[cur_id].tfm_id     = texpdf_tfm_open(tfm_name, 1);
   loaded_fonts[cur_id].subfont_id = subfont_id;
   loaded_fonts[cur_id].size       = ptsize;
   /* This will be reset later if it was really generated by the dvi file. */
@@ -934,6 +937,9 @@ dvi_locate_native_font (const char *filename, uint32_t index,
     /* FIXME: would be more efficient if pdf_load_native_font returned the mrec ptr (or NULL for error)
               so we could avoid doing a second lookup for the item we just inserted */
   }
+
+  memset(&loaded_fonts[cur_id], 0, sizeof (struct loaded_font));
+
   loaded_fonts[cur_id].font_id = texpdf_dev_locate_font(native_fontmap, fontmap_key, ptsize);
   loaded_fonts[cur_id].size    = ptsize;
   loaded_fonts[cur_id].type    = NATIVE;
